# traindb

./: .gitignore  CMakeLists.txt
client/: CMakeLists.txt  client-tests.cmake
client/include/: client.hpp  read_client.hpp  write_client.hpp
client/src/: main.cpp
common/: client.hpp  entry.hpp  net.hpp  proto.hpp
server/: CMakeLists.txt  server-tests.cmake
server/include/: block_queue.hpp  file_storage.hpp  read_server.hpp  server.hpp  server_connection.hpp  storage.hpp  storage_types.hpp  succ_client.hpp  version_list.hpp  write_server.hpp
server/src/: block_queue.cpp  file_storage.cpp  main.cpp  read_server.cpp  storage.cpp  succ_client.cpp  write_server.cpp
server/tests/: block_queue_test.cpp  file_storage_test.cpp  storage_test.cpp
